@@ -1,6 +1,7 @@
 ** Version 1.0 - Date 17.01.2011 **
 
   * Do not trigger success callback when isUpdate within M.MapView's init()
+  * Added icon property to M.MapMarkerView
 
 ** Version 1.0 RC1 - Date 17.01.2011 **
 
